Updated Update checker Added JemPlaceholder support and expansion Reordered message sending logic Minor fixes