@@ -1,152 +1,156 @@
 package com.jemsire.utils;
 
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-public class UpdateChecker {
-    private static final String GITHUB_API_URL = "https://api.github.com/repos/Jemsire/JemAnnouncements/releases/latest";
-    private static final String GITHUB_RELEASES_URL = "https://github.com/Jemsire/JemAnnouncements/releases";
-    
+public final class UpdateChecker {
+
+    private static final String GITHUB_API_URL =
+            "https://api.github.com/repos/Jemsire/JemAnnouncements/releases/latest";
+
+    private static final String GITHUB_RELEASES_URL =
+            "https://github.com/Jemsire/JemAnnouncements/releases";
+
+    private static final String USER_AGENT =
+            "JemAnnouncements-UpdateChecker";
+
+    private static final HttpClient HTTP_CLIENT =
+            HttpClient.newBuilder()
+                    .connectTimeout(Duration.ofSeconds(5))
+                    .build();
+
+    private static final ExecutorService UPDATE_EXECUTOR =
+            Executors.newSingleThreadExecutor(r -> {
+                Thread t = new Thread(r, "JemAnnouncements-UpdateChecker");
+                t.setDaemon(true);
+                return t;
+            });
+
     private final String currentVersion;
-    
+
     public UpdateChecker(String currentVersion) {
         this.currentVersion = currentVersion;
     }
-    
+
     /**
-     * Checks for updates asynchronously
-     * @deprecated Use checkForUpdates() from thread pool instead
+     * Entry point to call from plugin startup.
+     * Never blocks the main thread.
      */
-    @Deprecated
     public void checkForUpdatesAsync() {
-        // Run in a separate thread to avoid blocking startup
-        Thread updateThread = new Thread(() -> {
-            try {
-                checkForUpdates();
-            } catch (Exception e) {
-                // Silently fail - update checking shouldn't break the plugin
-                Logger.warning("Update check failed: " + e.getMessage());
-            }
-        });
-        updateThread.setName("JemAnnouncements-UpdateChecker");
-        updateThread.setDaemon(true);
-        updateThread.start();
+        UPDATE_EXECUTOR.execute(this::checkForUpdatesInternal);
     }
 
     /**
-     * Checks for updates synchronously
-     * Can be called from any thread - uses Logger utility for thread-safe logging
+     * Internal synchronous logic.
+     * Runs ONLY on the update executor.
      */
-    public void checkForUpdates() {
+    private void checkForUpdatesInternal() {
         try {
+            Logger.info("Checking for updates...");
+
             String latestVersion = fetchLatestVersion();
-            
+
             if (latestVersion == null) {
                 Logger.info("Could not fetch latest version from GitHub");
                 return;
             }
-            
+
             if (isNewerVersion(latestVersion, currentVersion)) {
-                Logger.info("═══════════════════════════════════════════════════════════");
-                Logger.info("A new version of JemAnnouncements is available!");
-                Logger.info("Current version: " + currentVersion);
-                Logger.info("Latest version: " + latestVersion);
-                Logger.info("Download: " + GITHUB_RELEASES_URL);
-                Logger.info("═══════════════════════════════════════════════════════════");
+                logUpdateAvailable(latestVersion);
             } else {
                 Logger.info("JemAnnouncements is up to date! (Version: " + currentVersion + ")");
             }
         } catch (Exception e) {
-            Logger.severe("Update check failed: " + e.getMessage(), e);
+            Logger.warning("Update check failed: " + e.getMessage());
         }
     }
-    
+
     /**
-     * Fetches the latest release version from GitHub API
+     * HTTP call
      */
     private String fetchLatestVersion() {
         try {
-            URL url = new URL(GITHUB_API_URL);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.setRequestProperty("Accept", "application/vnd.github.v3+json");
-            connection.setConnectTimeout(5000); // 5 second timeout
-            connection.setReadTimeout(5000);
-            
-            int responseCode = connection.getResponseCode();
-            if (responseCode != HttpURLConnection.HTTP_OK) {
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(GITHUB_API_URL))
+                    .header("Accept", "application/vnd.github.v3+json")
+                    .header("User-Agent", USER_AGENT)
+                    .timeout(Duration.ofSeconds(5))
+                    .GET()
+                    .build();
+
+            HttpResponse<String> response =
+                    HTTP_CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
+
+            if (response.statusCode() != 200) {
                 return null;
             }
-            
-            StringBuilder response = new StringBuilder();
-            try (BufferedReader reader = new BufferedReader(
-                    new InputStreamReader(connection.getInputStream(), StandardCharsets.UTF_8))) {
-                String line;
-                while ((line = reader.readLine()) != null) {
-                    response.append(line);
-                }
-            }
-            
-            // Parse JSON to extract tag_name
-            // Simple regex approach - looking for "tag_name":"v1.0.0" or "tag_name":"1.0.0"
-            Pattern pattern = Pattern.compile("\"tag_name\"\\s*:\\s*\"([^\"]+)\"");
-            Matcher matcher = pattern.matcher(response.toString());
-            
-            if (matcher.find()) {
-                String tagName = matcher.group(1);
-                // Remove 'v' prefix if present (e.g., "v1.0.0" -> "1.0.0")
-                return tagName.startsWith("v") ? tagName.substring(1) : tagName;
-            }
-            
-            return null;
+
+            return extractTagName(response.body());
         } catch (Exception e) {
             return null;
         }
     }
-    
-    /**
-     * Compares two version strings to determine if the first is newer than the second
-     * Supports semantic versioning (e.g., 1.0.0, 1.0.1, 2.0.0)
-     */
-    private boolean isNewerVersion(String version1, String version2) {
+
+    private String extractTagName(String json) {
+        Matcher matcher = Pattern
+                .compile("\"tag_name\"\\s*:\\s*\"([^\"]+)\"")
+                .matcher(json);
+
+        if (!matcher.find()) {
+            return null;
+        }
+
+        String tag = matcher.group(1);
+        return tag.startsWith("v") ? tag.substring(1) : tag;
+    }
+
+    private boolean isNewerVersion(String latest, String current) {
         try {
-            // Remove any non-numeric/dot characters (like -SNAPSHOT)
-            String clean1 = version1.split("-")[0];
-            String clean2 = version2.split("-")[0];
-            
-            String[] parts1 = clean1.split("\\.");
-            String[] parts2 = clean2.split("\\.");
-            
-            int maxLength = Math.max(parts1.length, parts2.length);
-            
-            for (int i = 0; i < maxLength; i++) {
-                int part1 = i < parts1.length ? Integer.parseInt(parts1[i]) : 0;
-                int part2 = i < parts2.length ? Integer.parseInt(parts2[i]) : 0;
-                
-                if (part1 > part2) {
-                    return true;
-                } else if (part1 < part2) {
-                    return false;
-                }
+            String cleanLatest = latest.split("-")[0];
+            String cleanCurrent = current.split("-")[0];
+
+            String[] lParts = cleanLatest.split("\\.");
+            String[] cParts = cleanCurrent.split("\\.");
+
+            int max = Math.max(lParts.length, cParts.length);
+
+            for (int i = 0; i < max; i++) {
+                int l = i < lParts.length ? Integer.parseInt(lParts[i]) : 0;
+                int c = i < cParts.length ? Integer.parseInt(cParts[i]) : 0;
+
+                if (l > c) return true;
+                if (l < c) return false;
             }
-            
-            // If versions are equal, check if one has -SNAPSHOT suffix
-            // SNAPSHOT versions are considered older than release versions
-            boolean v1Snapshot = version1.contains("-SNAPSHOT");
-            boolean v2Snapshot = version2.contains("-SNAPSHOT");
-            
-            if (v1Snapshot && !v2Snapshot) {
-                return false; // v1 is snapshot, v2 is release
-            } else return !v1Snapshot && v2Snapshot; // v1 is release, v2 is snapshot
-// Versions are equal
+
+            boolean latestSnapshot = latest.contains("-SNAPSHOT");
+            boolean currentSnapshot = current.contains("-SNAPSHOT");
+
+            return currentSnapshot && !latestSnapshot;
         } catch (Exception e) {
-            // If version comparison fails, assume versions are equal
             return false;
         }
+    }
+
+    private void logUpdateAvailable(String latestVersion) {
+        Logger.info("═══════════════════════════════════════════════════════════");
+        Logger.info("A new version of JemAnnouncements is available!");
+        Logger.info("Current version: " + currentVersion);
+        Logger.info("Latest version: " + latestVersion);
+        Logger.info("Download: " + GITHUB_RELEASES_URL);
+        Logger.info("═══════════════════════════════════════════════════════════");
+    }
+
+    /**
+     * Call from plugin disable if Hytale provides lifecycle hooks.
+     */
+    public static void shutdown() {
+        UPDATE_EXECUTOR.shutdownNow();
     }
 }
